<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:padding="20dp"
    android:background="@color/NIU_RED"
    tools:context="edu.niu.cs.z1779946.quiz240.SignupActivity">

    <TextView
        style="@style/textView_style0"
        android:text="@string/signUp"
        android:textColor="@color/white_greyish"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/fullName"
        style="@style/editText_Signup_style0"
        android:drawableLeft="@drawable/user"
        android:hint="@string/fullName"
        android:inputType="textCapWords" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <EditText
        android:id="@+id/userEmailId"
        style="@style/editText_Signup_style0"
        android:drawableLeft="@drawable/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <EditText
        android:id="@+id/userName"
        style="@style/editText_Signup_style0"
        android:drawableLeft="@drawable/user"
        android:hint="@string/UserName"
        android:inputType="textCapWords" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <EditText
        android:id="@+id/password"
        style="@style/editText_Signup_style0"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="8dp"
        android:hint="@string/passowrd"
        android:inputType="textPassword" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <EditText
        android:id="@+id/confirmPassword"
        style="@style/editText_Signup_style0"
        android:drawableLeft="@drawable/confirm_password"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <CheckBox
        android:id="@+id/terms_conditions"
        style="@style/textView_style0"
        android:layout_marginTop="7dp"
        android:text="@string/terms_conditions"
        android:textColor="@color/button_selectorcolor"
        android:textSize="12sp" />

    <Button
        android:onClick="signUpBtn"
        android:id="@+id/signUpBtn"
        style="@style/button_style0"
        android:text="@string/signUp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/already_user"
        style="@style/textView_style0"
        android:padding="10dp"
        android:text="@string/already_user"
        android:textColor="@color/white"
        android:onClick="login"/>

</LinearLayout>